# docker_compose_todo

./: compose.yaml
project/: Dockerfile.dev  pyproject.toml
project/.devcontainer/: devcontainer.json
project/project/: main.py
